src/vs/workbench/browser/positronModalDialogs/convertToCodeModalDialog.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (C) 2025 Posit Software, PBC. All rights reserved.
 *  Licensed under the Elastic License 2.0. See LICENSE.txt for license information.
 *--------------------------------------------------------------------------------------------*/

.code-syntax-heading {
	margin-top: 0;
	margin-bottom: 8px;
}

.convert-to-code-syntax-dropdown {
	width: 100%;
	margin-bottom: 16px;
}

.convert-to-code-editor {
	height: 200px;
	width: 95%;
	border: 1px solid var(--vscode-positronModalDialog-border);
	padding: 8px;
}

